relative image path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/rares.png" alt="rares profile picture"></td>
+            <td><img src="./images/rares.png" alt="rares profile picture"></td>
             <td>
                 <h1>Rares Tincu</h1>
                 <p><em>Computer Science Student</em> at <strong><a href="https://www.uni-augsburg.de/en/">Universität Augsburg</a></strong></p>
