--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Blog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
 </head>
-  <body>
+
+<body>
     <table id="profiletable" cellspacing="20">
         <tr>
             <td style="padding-right: 15px;"><img src="images/rares.png" alt="rares profile picture"></td>
             <td>
                 <h1>Rares Tincu</h1>
-                <p><em>Computer Science Student</em> at <strong><a href="https://www.uni-augsburg.de/en/">Universität Augsburg</a></strong></p>
+                <p><em>Computer Science Student</em> at <strong><a href="https://www.uni-augsburg.de/en/">Universität
+                            Augsburg</a></strong></p>
                 <p>Check out my blog project: <a href="login.html">A Poem Without Words</a></p>
                 <div>
                     <h4>Contact</h4>
@@ -62,7 +65,7 @@
                     <td>C#</td>
                     <td>&starf;&starf;&starf;&starf;</td>
                 </tr>
-                <tr>                
+                <tr>
                     <td>C</td>
                     <td>&starf;&starf;&starf;</td>
                 </tr>
@@ -75,4 +78,5 @@
     </div>
     <hr>
 </body>
+
 </html>
