--- a/index.html
+++ b/index.html
@@ -1,82 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Blog</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" />
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>My Blog</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+            crossorigin="anonymous">
+        <link rel="stylesheet" href="./css/style.css" />
+    </head>
 
-<body>
-    <table id="profiletable" cellspacing="20">
-        <tr>
-            <td style="padding-right: 15px;"><img src="images/rares.png" alt="rares profile picture"></td>
-            <td>
-                <h1>Rares Tincu</h1>
-                <p><em>Computer Science Student</em> at <strong><a href="https://www.uni-augsburg.de/en/">Universität
-                            Augsburg</a></strong></p>
-                <p>Check out my blog project: <a href="login.html">A Poem Without Words</a></p>
-                <div>
-                    <h4>Contact</h4>
-                    <a href="https://www.linkedin.com/in/rares-tincu-890ab2239/">LinkedIn</a>
-                </div>
-            </td>
-        </tr>
-    </table>
-    <hr>
-    <div id="aboutme">
-        <h2>Experience</h2>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-        <ul>
-            <li>Web App: Appointments for charging electric car</li>
-            <li>Multimedia project: Machine Learning based on Pytorch</li>
-            <li>Research project: Human Pose Estimation based on Pytorch</li>
-        </ul>
-    </div>
-    <hr>
-    <div id="aboutme">
-        <table cellspacing="10">
-            <thead>
-                <tr>
-                    <th>Programming Skills</th>
-                    <th>Knowledge</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Python</td>
-                    <td>&starf;&starf;&starf;&starf;&starf;</td>
-                </tr>
-                <tr>
-                    <td>ASP.NET Core MVC</td>
-                    <td>&starf;&starf;&starf;&starf;</td>
-                </tr>
-                <tr>
-                    <td>Java</td>
-                    <td>&starf;&starf;&starf;&starf;</td>
-                </tr>
-                <tr>
-                    <td>Javascript</td>
-                    <td>&starf;&starf;</td>
-                </tr>
-                <tr>
-                    <td>C#</td>
-                    <td>&starf;&starf;&starf;&starf;</td>
-                </tr>
-                <tr>
-                    <td>C</td>
-                    <td>&starf;&starf;&starf;</td>
-                </tr>
-                <tr>
-                    <td>Bootstrap</td>
-                    <td>&starf;&starf;&starf;</td>
-                </tr>
-            </tbody>
+    <body>
+        <table id="profiletable" cellspacing="20">
+            <tr>
+                <td style="padding-right: 15px;"><img src="images/rares.png"
+                        alt="rares profile picture"></td>
+                <td>
+                    <h1>Rares Tincu</h1>
+                    <p><em>Computer Science Student</em> at <strong><a
+                                href="https://www.uni-augsburg.de/en/">Universität
+                                Augsburg</a></strong></p>
+                    <p>Check out my blog project: <a href="login.html">A Poem
+                            Without Words</a></p>
+                    <div>
+                        <h4>Contact</h4>
+                        <a
+                            href="https://www.linkedin.com/in/rares-tincu-890ab2239/">LinkedIn</a>
+                    </div>
+                </td>
+            </tr>
         </table>
-    </div>
-    <hr>
-</body>
+        <hr>
+        <div id="aboutme">
+            <h2>Experience</h2>
+            <script
+                src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+                crossorigin="anonymous"></script>
+            <ul>
+                <li>Web App: Appointments for charging electric car</li>
+                <li>Multimedia project: Machine Learning based on Pytorch</li>
+                <li>Research project: Human Pose Estimation based on Pytorch</li>
+            </ul>
+        </div>
+        <hr>
+        <div id="aboutme">
+            <table cellspacing="10">
+                <thead>
+                    <tr>
+                        <th>Programming Skills</th>
+                        <th>Knowledge</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Python</td>
+                        <td>&starf;&starf;&starf;&starf;&starf;</td>
+                    </tr>
+                    <tr>
+                        <td>ASP.NET Core MVC</td>
+                        <td>&starf;&starf;&starf;&starf;</td>
+                    </tr>
+                    <tr>
+                        <td>Java</td>
+                        <td>&starf;&starf;&starf;&starf;</td>
+                    </tr>
+                    <tr>
+                        <td>Javascript</td>
+                        <td>&starf;&starf;</td>
+                    </tr>
+                    <tr>
+                        <td>C#</td>
+                        <td>&starf;&starf;&starf;&starf;</td>
+                    </tr>
+                    <tr>
+                        <td>C</td>
+                        <td>&starf;&starf;&starf;</td>
+                    </tr>
+                    <tr>
+                        <td>Bootstrap</td>
+                        <td>&starf;&starf;&starf;</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <hr>
+    </body>
 
 </html>
