--- a/login.html
+++ b/login.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli" />
-    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli"
+      />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div id="bg">
@@ -22,22 +27,34 @@
                 <div class="row">
                   <div class="col">
                     <div class="card card-body">
-                      <form id="submitForm" action="/login" method="post" data-parsley-validate="" data-parsley-errors-messages-disabled="true" novalidate="" _lpchecked="1" >
-                        <input type="hidden" name="_csrf" value="7635eb83-1f95-4b32-8788-abec2724a9a4" />
+                      <form id="submitForm" action="/login" method="post"
+                        data-parsley-validate=""
+                        data-parsley-errors-messages-disabled="true"
+                        novalidate="" _lpchecked="1">
+                        <input type="hidden" name="_csrf"
+                          value="7635eb83-1f95-4b32-8788-abec2724a9a4" />
                         <div class="form-group required">
                           <lSabel for="username">Username / Email</lSabel>
-                          <input type="text" class="form-control text-lowercase" id="username" required="" name="username" value="" />
+                          <input type="text" class="form-control text-lowercase"
+                            id="username" required="" name="username" value=""
+                            />
                         </div>
                         <div class="form-group required mt-3 mb-3">
-                          <label class="d-flex flex-row align-items-center mt-2 mb-2" for="password">Password
-                            <a id="forget" class="ml-auto border-link small-xl" href="/forget-password">Forgot Password?</a>
+                          <label class="d-flex flex-row align-items-center mt-2
+                            mb-2" for="password">Password
+                            <a id="forget" class="ml-auto border-link small-xl"
+                              href="/forget-password">Forgot Password?</a>
                           </label>
-                          <input type="password" class="form-control" required="" id="password" name="password" value=""/>
+                          <input type="password" class="form-control"
+                            required="" id="password" name="password" value=""/>
                         </div>
                         <div class="form-group mt-3 mb-3">
                           <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="remember-me" name="remember-me" data-parsley-multiple="remember-me" />
-                            <label class="custom-control-label" for="remember-me">Stay Signed In</label>
+                            <input type="checkbox" class="custom-control-input"
+                              id="remember-me" name="remember-me"
+                              data-parsley-multiple="remember-me" />
+                            <label class="custom-control-label"
+                              for="remember-me">Stay Signed In</label>
                           </div>
                         </div>
                         <div class="text-center">
