--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli"
       />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./images/favicon.ico">
   </head>
   <body>
     <div id="bg">
