added linkedin icon

--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
           
           
           <div class="bottom-container">
-            <a class="footer-link" href="https://www.linkedin.com/in/rares-tincu-890ab2239/">LinkedIn</a>
+            <a class="footer-link" href="https://www.linkedin.com/in/rares-tincu-890ab2239/">
+                <img src="https://cdn-icons-png.flaticon.com/512/3536/3536505.png" alt="LinkedIn" style="width:25px; height:25px;">
+                LinkedIn
+            </a>
             <a class="footer-link" href="login.html">Website</a>
             <p class="copyright">© Rares Tincu.</p>
           </div>
