--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@
                             <td>Bootstrap</td>
                             <td>&starf;&starf;&starf;</td>
                         </tr>
+                        <tr>
+                            <td>HTML</td>
+                            <td>&starf;&starf;&starf;&starf;</td>
+                        </tr>
+                        <tr>
+                            <td>CSS</td>
+                            <td>&starf;&starf;&starf;</td>
+                        </tr>
+                        <tr>
+                            <td>Git</td>
+                            <td>&starf;&starf;&starf;</td>
+                        </tr>
                     </tbody>
                 </table>
               </div>
